fix: fix weird clipping in nav bar

--- a/rielarmoryangular/src/app/components/header/header.component.scss
+++ b/rielarmoryangular/src/app/components/header/header.component.scss
@@ -11,7 +11,7 @@ nav.navigationbar {
     @include app.app-theme;
 
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
     box-sizing: border-box;
